--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Watch It!",
+  "name": "My Amazing App",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Cool-icon.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/x-png"
     }
   ],
   "start_url": "./index.html",
