--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.12",
     "@sentry/browser": "^5.15.4",
     "axios": "^0.18.1",
     "bootstrap": "^4.1.1",
@@ -12,11 +13,13 @@
     "lodash": ">=4.17.12",
     "prop-types": "^15.6.2",
     "raven-js": "^3.27.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.0",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-toastify": "^4.1.0"
+    "react-toastify": "^4.1.0",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
